# kfp_pipelines

./: .gitignore  AGENTS.md  ARTIFACT_STORE_INTEGRATION_TEST_PLAN.md  CLAUDE.md  MLMD_REMOVAL_CODE_REVIEW.md  coverprofile.out  go.mod  go.sum
.claude/agents/: archie-architect.md  jack-delivery_owner.md  lee-team_lead.md  neil-test_engineer.md  parker-product_manager.md  stella-staff_engineer.md  uma-ux_team_lead.md
.claude/commands/: analyze.md  clarify.md  ideate.md  implement.md  plan.md  specify.md  tasks.md
.github/workflows/: api-server-tests.yml  e2e-test.yml  integration-tests-v1.yml  (+1 more)
ai-agent/: README.md  go.mod  integration_test.sh  main.go
backend/: .env  Dockerfile.test
mcp-server/: README.md  go.mod  go.sum  main.go  test_server.sh
mcp_server/: README.md  example_usage.py  mcp_config.json  mcp_pipeline_server.py  requirements.txt
perf-tests/: README.md  pyproject.toml  test_performance.py
perf-tests/config/: logging_config.py  test_config.py
perf-tests/docs/: ARCHITECTURE.md  JSON_SCENARIOS.md
perf-tests/enums/: test_mode.py
perf-tests/factory/: client_factory.py
perf-tests/logger/: logger.py
perf-tests/models/: test_scenario.py
perf-tests/runners/: base_runner.py  pipeline_runner.py  pipeline_scheduled_runner.py  pipeline_upload_runner.py  random_get_runner.py
perf-tests/serde/: enum_serde.py
perf-tests/test_data/pipeline_files/: pipeline_with_large_datasets.yaml
perf-tests/test_data/scenarios/: smoke.json
perf-tests/utils/: json_utils.py
rfe/: README.md  requirements.txt
specs/: spec.md
test/: presubmit-yapf-sdk.sh
(+332 files in other folders)
