[project]
name = "kfp-perf-tests"
dynamic = ["version"]
description = "KFP Performance Test Framework"
requires-python = ">=3.11.9"
dependencies = [
    "attrs==24.2.0",
    "environs>=9.5.0",
    "pytest>=7.1.1",
    "PyYAML>=6.0",
    "requests>=2.27.1",
    "requests-toolbelt>=1.0.0",
    "responses>=0.20.0",
    "tenacity==8.3.0",
    "typing-extensions>=4.1.1",
    "urllib3==2.2.3",
    "virtualenv==20.28.0",
    "colorlog>=6.7.0",
    "pydantic==2.10.6",
    "locust==2.39.0",
    "kfp==2.14.2"
]

[project.optional-dependencies]
dev = [
    "setuptools==75.6.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["performance_tests"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
style = "pep440"
bump = true
fallback-version = "0.0.0"